# hf-planner

./: .env.example.prod  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Caddyfile  Justfile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy-cloudrun.yml  deploy-vm.yml  deploy.yml
backend/: .dockerignore  .env.example  Dockerfile  add_comprehensive_schedule.py  add_correct_overlapping_concerts.py  add_overlapping_concerts.py  add_thursday.py  alembic.ini  check_overlaps.py  fix_all_overlaps.py  justfile  pyproject.toml  remove_overlapping_same_stage.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  003_add_favorites_public.py  3790bfd154bc_initial_schema.py  a1b2c3d4e5f6_add_rating_to_concert.py  b2c3d4e5f6a7_add_push_subscriptions.py
backend/alembic/versions_backup/: 001_initial_migration.py  002_add_festival_day.py  003_add_favorites_public.py  README.md
backend/app/: main.py
backend/app/cli/: notify.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/database/: connection.py
backend/app/models/: __init__.py  concert.py  favorite.py  push_subscription.py  user.py
backend/app/routers/: auth.py  concerts.py  favorites.py  push.py  users.py
backend/app/schemas/: auth.py  concert.py  favorite.py  push.py  user.py
backend/app/services/: push_broadcaster.py
backend/app/utils/: seed.py
backend/tests/: conftest.py  test_auth.py  test_concerts.py  test_favorites.py  test_health.py  test_users.py
docs/deployment/: kubernetes.md
frontend/: .dockerignore  Dockerfile  README.md  index.html  justfile  package-lock.json  package.json  pwa-assets.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
frontend/src/: App.tsx  index.css  main.tsx  sw.ts
frontend/tests/: README.md
hooks/: validate-docker-compose.sh
k8s/: README.md
k8s/dev/: backend-configmap.yaml  backend-deployment.yaml  backend-migration-job.yaml  (+10 more)
scripts/: vm-setup.sh
(+42 files in other folders)
